--- a/prime_home/templates/prime_home/index/branches_section.html
+++ b/prime_home/templates/prime_home/index/branches_section.html
@@ -1,8 +1,7 @@
-<section id="div_branches" data-aos="zoom-in"
-    class="bg-light border border-left-0 border-right-0 border-top-0 pb-5 pt-5">
+<section id="div_branches" class="dark-transparent-bg border border-left-0 border-right-0 border-top-0 pb-5 pt-5 text-white">
     <div class="container pb-5 pt-5">
-        <h5 class="text-center text-favorite">Our Branches</h5>
-        <h2 class="h1 mb-4 text-center text-dark">Some of our offices</h2>
+        <h5 class="text-center text-favorite2">Our Branches</h5>
+        <h2 class="h1 mb-4 text-center">Some of our offices</h2>
         {% include "prime_home/_branches_list.html" %}
     </div>
 </section>
