--- a/prime_home/templates/prime_home/index/contact_us_section.html
+++ b/prime_home/templates/prime_home/index/contact_us_section.html
@@ -1,12 +1,12 @@
-<section class="py-5">
+<section class="py-5 dark-transparent-bg">
     <div id="div_contact_us_section" class="testimony container py-5">
-        <h2 class="h1 mb-4 text-center">Contact Us</h2>        <div class="row">
+        <h2 class="h1 mb-4 text-center text-favorite2">Contact Us</h2>        <div class="row">
             <div class="col-lg-6 col-xl-5">
                 <div class="bg-light p-5">
                     <div class="py-3">
                         <h2 class="h5 text-primary">Get in Touch</h2>
-                        <h3 class="display-4 fw-bold mb-5 text-dark">Want to study korean language?</h3>
-                        <h4 class="mb-3 text-dark">Visit us at</h4>
+                        <h3 class="display-4 fw-bold mb-5">Want to study korean language?</h3>
+                        <h4 class="mb-3">Visit us at</h4>
                         <p>
                             <h2 class="h5 text-primary">Palawan Branch</h2>
                             3rd Floor, Yusay Incorporated Building,Lacao St. Puerto Princesa City, Palawan
@@ -31,7 +31,7 @@
                             <h2 class="h5 text-primary">Tagbilaran Branch</h2>
                             Room 201 A. 2nd floor,. Saint Jude Building, Gallares St., Corner H Grupo St., Tagbilaran City.
                         </p>
-                        <h4 class="mb-3 text-dark">Connect at</h4>
+                        <h4 class="mb-3">Connect at</h4>
                         <ul class="list-unstyled mb-0"> 
                             <li class="mb-1"> 
                                 <a href="mailto:info@company.com" class="link-secondary text-decoration-none">primekoreanlanguage.com</a> 
@@ -46,9 +46,9 @@
                     </div>
                 </div>                             
             </div>
-            <div class="col-lg-6 col-xl-7">
+            <div class="col-lg-6 col-xl-7 text-white">
                 <div class="px-4 px-xl-5 py-5">
-                    <h2 class="mb-4 text-dark">Send us a message</h2>
+                    <h2 class="mb-4 text-white">Send us a message</h2>
                     <form method="POST" action="{{url_for('prime_home.send_us_a_message')}}">
                         {{ form.csrf_token }}
                         <div class="gx-3 row">
