--- a/app/admin/templates/admin/admin_edit.html
+++ b/app/admin/templates/admin/admin_edit.html
@@ -281,20 +281,22 @@
             })();
 
                     document.addEventListener('DOMContentLoaded', function () {
-                        var imageFileInput = document.querySelector('.js-image-file');
+                        var imageFileInputs = document.querySelectorAll('.js-image-file');
                         
-                        imageFileInput.addEventListener('change', function () {
-                            var file = this.files[0];
-                            var container = this.closest('.js-image-container');
-                            
-                            if (file) {
-                                var reader = new FileReader();
-                                reader.onload = function (e) {
-                                    var imagePreview = container.querySelector('.js-image-preview');
-                                    imagePreview.src = e.target.result;
-                                };
-                                reader.readAsDataURL(file);
-                            }
+                        imageFileInputs.forEach(function (imageFileInput) {
+                            imageFileInput.addEventListener('change', function () {
+                                var file = this.files[0];
+                                var container = this.closest('.js-image-container');
+                                
+                                if (file) {
+                                    var reader = new FileReader();
+                                    reader.onload = function (e) {
+                                        var imagePreview = container.querySelector('.js-image-preview');
+                                        imagePreview.src = e.target.result;
+                                    };
+                                    reader.readAsDataURL(file);
+                                }
+                            });
                         });
 
 
