--- a/prime_home/static/css/style.css
+++ b/prime_home/static/css/style.css
@@ -64,8 +64,16 @@
     background-color: rgb(0, 97, 168) !important;
 }
 
+.primary-color2 {
+    background-color: rgb(90 169 227) !important;
+}
+
 .text-favorite {
     color: rgb(0, 97, 168) !important;
+}
+
+.text-favorite2 {
+    color: rgb(90 169 227) !important;
 }
 
 .background-korea-spring {
@@ -84,4 +92,31 @@
     background-size: cover;
     background-color: #00000085;
     background-blend-mode: color;
+}
+body {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #0061a8;
+}
+.dark-transparent-bg {
+    background-color: #00000085;
+}
+
+.dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate {
+    color: #fff !important;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
+    cursor: default;
+    color: #fff !important;
+    border: 1px solid transparent;
+    background: transparent;
+    box-shadow: none;
+}
+
+div.dataTables_wrapper div.dataTables_filter input {
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
 }
