--- a/prime_home/templates/prime_home/about_page.html
+++ b/prime_home/templates/prime_home/about_page.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <section class="primary-color pt-5 text-white">
-    <div class="container mb-4 py-5">
+    <div class="container mb-4 py-5" style="margin-bottom: 200px !important;">
         <h1 class="display-5 fw-bold">About Us</h1>
         <p class="fs-3 mb-0">
          The Prime Korean Language and Review Center Incorporated is the result of Jonwel Suprecencia's firsthand experience as an EPS worker in South Korea. Through his early endeavors, Jonwel recognized the crucial need for Filipinos working abroad to acquire a strong foundation in the Korean language as part of their employment requirements. He gained a deep understanding of the disparities between Filipino and Korean cultures and developed a comprehensive knowledge of Korean Labor and Immigration Laws. <br>
@@ -15,26 +15,25 @@ Prime Korean Language and Review Center is a language training center dedicated 
 We are committed to assisting Filipinos in passing the Korean language proficiency test by providing support. Our comprehensive guidance helps students/applicants fulfill the step-by-step requirements necessary to qualify as factory workers in South Korea. With our excellent Korean language training services, we empower Filipino workers to excel in the EPS-TOPIK exam administered by POEA.<br>
       </p>
     </div>
-    <svg viewBox="0 0 1440 185" preserveAspectRatio="none" fill="rgb(0, 97, 168)" version="1.1" xmlns="http://www.w3.org/2000/svg" class="bg-white d-block text-primary" width="100%" height="160">
-        <path d="M 0 0 H 1440 V 60 C 1114 355 700 35 516 35 C 333 35 246 199 0 60 V 0 Z"/>
-    </svg>
 </section>
-<div class="container" style="margin-top: -11rem;">
-    <div class="align-items-center row">
-        <div class="col-11 col-md-10 col-xl-8 mx-auto"> 
-            <img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/about.jpg" class="img-fluid mb-3 rounded w-100" alt="Sample image" width="1280" height="720"/>
+<section class="dark-transparent-bg text-white">
+    <div class="container"  style="margin-top: -11rem;">
+        <div class="align-items-center row">
+            <div class="col-11 col-md-10 col-xl-8 mx-auto"> 
+                <img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/about.jpg" class="img-fluid mb-3 rounded w-100" alt="Sample image" width="1280" height="720"/>
+            </div>
         </div>
     </div>
-</div>
+</section>
 
-<section data-aos="zoom-in" data-aos-duration="2000" class="pb-5 pt-5"> 
+<section class="pb-5 pt-5 dark-transparent-bg text-white"> 
     <div class="container pb-5 pt-5"> 
-        <h2 class="h5 text-primary">Who We Are</h2>
-        <h3 class="h1 mb-4 text-dark">CHOGI LANGUAGE AND TECHNOLOGY CENTER INC.</h3>
+        <h2 class="h5 text-favorite2">Who We Are</h2>
+        <h3 class="h1 mb-4 text-white">CHOGI LANGUAGE AND TECHNOLOGY CENTER INC.</h3>
         <p class="lead mb-5">
             At the Prime Korean Language and Review Center, we take immense pride in being recognized as one of the best Korean language learning centers in the Philippines. Our primary objective is to help individuals achieve a progressive future by mastering the Korean language. Through our comprehensive programs, students can become fluent speakers, improve their listening skills, and enhance their writing and reading abilities. Additionally, we provide dedicated assistance to Filipinosaiming to pass the EPS-TOPIK exam, opening doors for employment as factory workers in South Korea. We are passionate about empowering Filipinos to fulfill their dreams and uplift their living standards.
         </p>       
-            <h3 class="h1 mb-4 text-dark">What is eps-topik?
+            <h3 class="h1 mb-4 text-white">What is eps-topik?
             </h3>
             <p class="lead mb-5">
                 EPS-TOPIK stands for Employment Permit System-Test of Proficiency in Korean. It is a pure Korean language test implemented by HRD Korea and POEA to mitigate the presence of irregular workers in South Korea.
@@ -48,28 +47,28 @@ We are committed to assisting Filipinos in passing the Korean language proficien
     </div>                 
 </section>
 
-<section data-aos="zoom-in" data-aos-duration="2000" class="border-bottom pb-5 pt-5"> 
+<section class="border-bottom pb-5 pt-5 dark-transparent-bg text-white"> 
     <div class="container pb-5 pt-5"> 
         <div class="row"> 
             <div class="col-lg-4"> 
-                <h2 class="h5 text-primary">Who Are We</h2> 
-                <h3 class="h1 mb-4 text-dark">We are one of the best korean language learning center in the Philippines</h3> 
+                <h2 class="h5 text-favorite2">Who Are We</h2> 
+                <h3 class="h1 mb-4 text-white">We are one of the best korean language learning center in the Philippines</h3> 
             </div>
             <div class="col-lg-8 col-xl-7 offset-xl-1"> 
-                <h4 class="h3 mb-4 text-dark">We want to help you guys and having a progressive future with us learn Korean language with us!!!!.</h4>
+                <h4 class="h3 mb-4 text-white">We want to help you guys and having a progressive future with us learn Korean language with us!!!!.</h4>
                 <p class="lead mb-4">Prime Korean Language and Review Center offers a lot of services like learning how to speak Korean as fluent as the native Koreans, improving your listening skills, writing and reading, We are also assisting Filipino's to pass the EPS-TOPIK exam for those who wants to work in South Korea as factory workers. We are helping Filipinos to achieve their dreams and fulfill their goals to lift up the status of their living</p>
                 <div class="row">
                     <div class="col-md-5">
-                        <div class="bg-light px-4 py-4 text-dark text-center">
-                            <h4 class="mb-3 text-dark">Vision</h4> 
+                        <div class="bg-dark px-4 py-4 text-white text-center">
+                            <h4 class="mb-3 text-white">Vision</h4> 
                             <p>
                     Our vision is rooted in continued mentorship, support, and assistance to Filipino students, enabling transformative life changes and creating a brighter future for each individual. We strive to facilitate harmonious and financially secure lives for our students while and after they work abroad.
                             </p> 
                         </div>
                     </div>
                     <div class="col-md-5 offset-md-1">
-                        <div class="bg-light px-4 py-4 text-dark text-center">
-                            <h4 class="mb-3 text-dark">Mission</h4> 
+                        <div class="bg-dark px-4 py-4 text-white text-center">
+                            <h4 class="mb-3 text-white">Mission</h4> 
                             <p>
                                 Our mission is to deliver intensive Korean language training that equips our students with the proficiency required to pass the Korean language proficiency test prescribed by HRD KOREA incoordination with POEA. We are dedicated to assisting our students in reaching their goals and ensuring that they acquire the essential skills in listening, speaking, reading, and writing in the Korean Language. Through our unwavering dedication, we combine efforts to enable our students to fulfill their dreams of working in South Korea.
                             </p> 
@@ -82,7 +81,7 @@ We are committed to assisting Filipinos in passing the Korean language proficien
 <div class="container"> 
         <div class="justify-content-center row"> 
             <div class="col-lg-3 col-sm-6 pb-3 pt-3">
-                <div class="bg-light px-4 py-5 text-dark">
+                <div class="bg-dark px-4 py-5 text-white">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="3rem" height="3rem" class="mb-3">
                         <path fill="none" d="M0 0h24v24H0z"/>
                         <path d="M15.199 9.945a2.6 2.6 0 0 1-.79-1.551l-.403-3.083-2.73 1.486a2.6 2.6 0 0 1-1.72.273L6.5 6.5l.57 3.056a2.6 2.6 0 0 1-.273 1.72l-1.486 2.73 3.083.403a2.6 2.6 0 0 1 1.55.79l2.138 2.257 1.336-2.807a2.6 2.6 0 0 1 1.23-1.231l2.808-1.336-2.257-2.137zm.025 5.563l-2.213 4.65a.6.6 0 0 1-.977.155l-3.542-3.739a.6.6 0 0 0-.357-.182l-5.107-.668a.6.6 0 0 1-.449-.881l2.462-4.524a.6.6 0 0 0 .062-.396L4.16 4.86a.6.6 0 0 1 .7-.7l5.063.943a.6.6 0 0 0 .396-.062l4.524-2.462a.6.6 0 0 1 .881.45l.668 5.106a.6.6 0 0 0 .182.357l3.739 3.542a.6.6 0 0 1-.155.977l-4.65 2.213a.6.6 0 0 0-.284.284zm.797 1.927l1.414-1.414 4.243 4.242-1.415 1.415-4.242-4.243z"/>
@@ -91,7 +90,7 @@ We are committed to assisting Filipinos in passing the Korean language proficien
                 </div>                 
             </div>
             <div class="col-lg-3 col-sm-6 pb-3 pt-3">
-                <div class="bg-light px-4 py-5 text-dark">
+                <div class="bg-dark px-4 py-5 text-white">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="3rem" height="3rem" class="mb-3">
                         <path fill="none" d="M0 0h24v24H0z"/>
                         <path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-4-7h8a4 4 0 1 1-8 0zm0-2a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm8 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
@@ -100,7 +99,7 @@ We are committed to assisting Filipinos in passing the Korean language proficien
                 </div>                 
             </div>
             <div class="col-lg-3 col-sm-6 pb-3 pt-3">
-                <div class="bg-light px-4 py-5 text-dark">
+                <div class="bg-dark px-4 py-5 text-white">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="3rem" height="3rem" class="mb-3">
                         <path fill="none" d="M0 0h24v24H0z"/>
                         <path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-4-7h8a4 4 0 1 1-8 0zm0-2a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm8 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
@@ -109,7 +108,7 @@ We are committed to assisting Filipinos in passing the Korean language proficien
                 </div>                 
             </div>
             <div class="col-lg-3 col-sm-6 pb-3 pt-3">
-                <div class="bg-light px-4 py-5 text-dark">
+                <div class="bg-dark px-4 py-5 text-white">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="3rem" height="3rem" class="mb-3">
                         <path fill="none" d="M0 0h24v24H0z"/>
                         <path d="M17 15.245v6.872a.5.5 0 0 1-.757.429L12 20l-4.243 2.546a.5.5 0 0 1-.757-.43v-6.87a8 8 0 1 1 10 0zm-8 1.173v3.05l3-1.8 3 1.8v-3.05A7.978 7.978 0 0 1 12 17a7.978 7.978 0 0 1-3-.582zM12 15a6 6 0 1 0 0-12 6 6 0 0 0 0 12z"/>
@@ -121,10 +120,10 @@ We are committed to assisting Filipinos in passing the Korean language proficien
     </div>
 </section>
 
-<section data-aos="zoom-in" data-aos-duration="2000" class="bg-light pb-5 pt-5"> 
+<section class="pb-5 pt-5 dark-transparent-bg text-white"> 
     <div class="container py-5"> 
-        <h2 class="h5 text-center text-primary">Our Organization</h2>
-        <h3 class="h1 mb-4 text-center text-dark">Admin and Teachers</h3>
+        <h2 class="h5 text-center text-favorite2">Our Organization</h2>
+        <h3 class="h1 mb-4 text-center text-white">Admin and Teachers</h3>
 
 <div class="container">
 	<div class="row">
