--- a/prime_home/templates/prime_home/branches_page.html
+++ b/prime_home/templates/prime_home/branches_page.html
@@ -10,12 +10,9 @@
     <div class="container mb-4 py-5">
         <h1 class="display-5 fw-bold">Our Branches</h1>
     </div>
-    <svg viewBox="0 0 1440 185" preserveAspectRatio="none" fill="rgb(0, 97, 168)" version="1.1" xmlns="http://www.w3.org/2000/svg" class="bg-white d-block text-primary" width="100%" height="160">
-        <path d="M 0 0 H 1440 V 60 C 1114 355 700 35 516 35 C 333 35 246 199 0 60 V 0 Z"/>
-    </svg>
 </section>
 
-<section class="pb-5 pt-2"> 
+<section class="pb-5 pt-2 dark-transparent-bg text-white"> 
     <div class="container pb-5 pt-4"> 
         {% include "prime_home/_branches_list.html" %}          
     </div>                 
