--- a/prime_home/templates/prime_home/contact_us_page.html
+++ b/prime_home/templates/prime_home/contact_us_page.html
@@ -10,12 +10,9 @@
         <h1 class="display-5 fw-bold">Want to study korean language?</h1>
         <p class="fs-3 mb-0">Say hello, we&apos;d love to hear from you.</p>
     </div>
-    <svg viewBox="0 0 1440 185" preserveAspectRatio="none" fill="rgb(0, 97, 168)" version="1.1" xmlns="http://www.w3.org/2000/svg" class="bg-white d-block text-primary" width="100%" height="160">
-        <path d="M 0 0 H 1440 V 60 C 1114 355 700 35 516 35 C 333 35 246 199 0 60 V 0 Z"/>
-    </svg>
 </section>
 
-<section class="py-5">
+<section class="py-5 dark-transparent-bg">
     <div id="div_contact_us_section" class="testimony container py-5">
         <div class="row">
             <div class="col-lg-6 col-xl-5">
@@ -64,9 +61,9 @@
                     </div>
                 </div>                             
             </div>
-            <div class="col-lg-6 col-xl-7">
+            <div class="col-lg-6 col-xl-7 text-white">
                 <div class="px-4 px-xl-5 py-5">
-                    <h2 class="mb-4 text-dark">Send us a message</h2>
+                    <h2 class="mb-4 text-white">Send us a message</h2>
                     <form method="POST" action="{{url_for('prime_home.send_us_a_message')}}">
                         {{ form.csrf_token }}
                         <div class="gx-3 row">
