--- a/prime_home/templates/prime_home/index/about_us_section.html
+++ b/prime_home/templates/prime_home/index/about_us_section.html
@@ -1,16 +1,16 @@
-<section class="about border border-left-0 border-right-0 border-top-0 pb-5 pt-5 text-center"
+<section class="about border border-left-0 border-right-0 border-top-0 pb-5 pt-5 text-center dark-transparent-bg"
 id="about">
 <div class="container pb-5 pt-5">
     <div class="row">
         <div class="col-lg-12 ml-auto mr-auto">
-            <!-- <a data-aos="zoom-in" data-aos-duration="5000" class="btn btn-danger pl-4 pr-4 rounded-pill" href="#">Learn More</a> -->
-            <div data-aos="zoom-in" class="embed-responsive embed-responsive-16by9 mb-4">
+            <!-- <a class="btn btn-danger pl-4 pr-4 rounded-pill" href="#">Learn More</a> -->
+            <div class="embed-responsive embed-responsive-16by9 mb-4">
                 <video id="vid_welcome" width="560" height="315" controls autoplay muted>
                     <source src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/welcome_vid_1.mp4" type="video/mp4">
                   </video>
             </div>
             <div class="pb-4 pt-4 text-center">
-                <a style="color: white;" class="btn primary-color pl-4 pr-4 rounded-pill" href="{{url_for('prime_home.about')}}">View More</a>
+                <a style="color: white;" class="btn btn-primary pl-4 pr-4 rounded-pill" href="{{url_for('prime_home.about')}}">View More</a>
             </div>
             <script>
                 document.addEventListener('DOMContentLoaded', function() {
