--- a/prime_home/templates/prime_home/passers_page_by_klt_number.html
+++ b/prime_home/templates/prime_home/passers_page_by_klt_number.html
@@ -1,9 +1,11 @@
 {% extends 'prime_home/base.html' %}
 
+{% block head %}
+<link href="{{ url_for('bp_admin.static', filename='DataTables/datatables.css') }}" rel="stylesheet">
+{% endblock %}
 
 {% block header %}
     {% include "prime_home/navigation_header_2.html" %}
-    <link href="{{ url_for('bp_admin.static', filename='DataTables/datatables.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
@@ -11,21 +13,18 @@
     <div class="container mb-4 py-5">
         <h1 class="display-5 fw-bold">Passers</h1>
     </div>
-    <svg viewBox="0 0 1440 185" preserveAspectRatio="none" fill="rgb(0, 97, 168)" version="1.1" xmlns="http://www.w3.org/2000/svg" class="bg-white d-block text-primary" width="100%" height="160">
-        <path d="M 0 0 H 1440 V 60 C 1114 355 700 35 516 35 C 333 35 246 199 0 60 V 0 Z"/>
-    </svg>
 </section>
 
-<section data-aos="fade-right" class="pb-5 pt-2"> 
+<section data-aos="fade-right" class="pb-5 pt-2 dark-transparent-bg text-white"> 
     <div class="container pb-5 pt-4"> 
         <div class="gy-5 row">
             <div class="col-xl-10 mx-auto">
                 <div class="text-center mb-5">
-                    <h2 class="text-dark">PRIME KOREAN LANGUAGE AND REVIEW CENTER INC.</h2>
-                    <h5 class="text-dark">SEC.REG.NO.: CS201817522</h5>
-                    <h1 class="text-dark">PASSERS</h1>
-                    <h3 class="text-dark"><u>Employment Permit System - Test of Proficiency in Korean</u></h3>
-                    <h5 class="text-dark">{{ klt_number }}</h5>
+                    <h2 class="text-favorite2">PRIME KOREAN LANGUAGE AND REVIEW CENTER INC.</h2>
+                    <h5 class="text-white">SEC.REG.NO.: CS201817522</h5>
+                    <h1 class="text-white">PASSERS</h1>
+                    <h3 class="text-white"><u>Employment Permit System - Test of Proficiency in Korean</u></h3>
+                    <h5 class="text-white">{{ klt_number }}</h5>
                 </div>
 
                 <div class="row mb-5">
@@ -39,7 +38,7 @@
                 </div>
 
                 <div class="js-filter-content" data-value="all">
-                    <table class="align-middle mb-0 table table-bordered table-striped table-hover js-table-passers" data-branch="">
+                    <table class="align-middle mb-0 table table-bordered table-info table-hover js-table-passers" data-branch="">
                         <thead>
                             <tr>
                                 <th class="text-center">ID</th>
@@ -54,15 +53,15 @@
                 </div>
                 <div class="js-filter-content" data-value="branches_with_teacher" style="display: none;">
                     {% for branch in branches %}
-                        <h5 class="text-dark">{{ branch.name }}</h5>
+                        <h5 class="text-favorite2">{{ branch.name }}</h5>
                         {% if branch.teacher %}
-                            <h5 class="text-dark">
+                            <h5 class="text-white">
                                 Teacher:
                                 {{ branch.teacher.fname }} {{ branch.teacher.lname }}
                             </h5>
                         {% endif %}
                         <br>
-                        <table class="align-middle mb-0 table table-bordered table-striped table-hover js-table-passers" data-branch="{{branch.id}}">
+                        <table class="align-middle mb-0 table table-bordered table-info table-hover js-table-passers" data-branch="{{branch.id}}">
                             <thead>
                                 <tr>
                                     <th class="text-center">ID</th>
