--- a/prime_home/templates/prime_home/index/welcome_section.html
+++ b/prime_home/templates/prime_home/index/welcome_section.html
@@ -27,7 +27,7 @@
                 <div class="col-lg-6 pb-3 pt-3 d-flex flex-wrap justify-content-end ">
                     {% if weekdays_class or saturday_class or sunday_class %}
                         <div class="mb-3 w-75" style="max-height: 250px;overflow: hidden;overflow-y: scroll;scrollbar-color: #0061a8 #ffffff00;scrollbar-width: thin;padding-right: 5px;">
-                            <h2 class="display-5 font-weight-bold text-center">Start of Class</h2>
+                            <h2 class="display-5 font-weight-bold text-center">CLASS SCHEDULE</h2>
                             {% if weekdays_class %}
                                 <h4 class="font-weight-bold">Weekdays Class</h4>
                                 <table class="align-middle mb-0 table table-bordered table-info mb-2 table-sm">
