--- a/prime_home/templates/prime_home/index/welcome_section.html
+++ b/prime_home/templates/prime_home/index/welcome_section.html
@@ -28,63 +28,85 @@
                     {% if weekdays_class or saturday_class or sunday_class %}
                         <div class="mb-3 w-75" style="max-height: 250px;overflow: hidden;overflow-y: scroll;scrollbar-color: #0061a8 #ffffff00;scrollbar-width: thin;padding-right: 5px;">
                             <h2 class="display-5 font-weight-bold text-center">CLASS SCHEDULE</h2>
-                            {% if weekdays_class %}
-                                <h4 class="font-weight-bold">Weekdays Class</h4>
-                                <table class="align-middle mb-0 table table-bordered table-info mb-2 table-sm">
-                                    <thead>
-                                        <tr>
-                                            <th class="text-center">BRANCH</th>
-                                            <th class="text-center">START OF CLASS</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for item in weekdays_class %}
-                                            <tr>
-                                                <td class="text-center">{{item['branch_name']}}</td>
-                                                <td class="text-center">{{item['start_date']}}</td>
-                                            </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                </table>
-                            {% endif %}
-                            {% if saturday_class %}
-                                <h4 class="font-weight-bold">Saturday Class</h4>
-                                <table class="align-middle mb-0 table table-bordered table-info mb-2 table-sm">
-                                    <thead>
-                                        <tr>
-                                            <th class="text-center">BRANCH</th>
-                                            <th class="text-center">START OF CLASS</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for item in saturday_class %}
-                                            <tr>
-                                                <td class="text-center">{{item['branch_name']}}</td>
-                                                <td class="text-center">{{item['start_date']}}</td>
-                                            </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                </table>
-                            {% endif %}
-                            {% if sunday_class %}
-                                <h4 class="font-weight-bold">Sunday Class</h4>
-                                <table class="align-middle mb-0 table table-bordered table-info mb-2 table-sm">
-                                    <thead>
-                                        <tr>
-                                            <th class="text-center">BRANCH</th>
-                                            <th class="text-center">START OF CLASS</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for item in sunday_class %}
-                                            <tr>
-                                                <td class="text-center">{{item['branch_name']}}</td>
-                                                <td class="text-center">{{item['start_date']}}</td>
-                                            </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                </table>
-                            {% endif %}
+                            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                                {% if weekdays_class %}
+                                    <li class="nav-item" role="presentation">
+                                        <button class="nav-link active" id="weekdaysclass-tab" data-toggle="tab" data-target="#weekdaysclass" type="button" role="tab" aria-controls="weekdaysclass" aria-selected="true">Weekdays Class</button>
+                                    </li>
+                                {% endif %}
+                                {% if saturday_class %}
+                                    <li class="nav-item" role="presentation">
+                                        <button class="nav-link {%if not weekdays_class %}active{% endif %}" id="saturdayclass-tab" data-toggle="tab" data-target="#saturdayclass" type="button" role="tab" aria-controls="saturdayclass" aria-selected="false">Saturday Class</button>
+                                    </li>
+                                {% endif %}
+                                {% if sunday_class %}
+                                    <li class="nav-item" role="presentation">
+                                        <button class="nav-link {%if not weekdays_class and not saturday_class %}active{% endif %}" id="sundayclass-tab" data-toggle="tab" data-target="#sundayclass" type="button" role="tab" aria-controls="sundayclass" aria-selected="false">Sunday Class</button>
+                                    </li>
+                                {% endif %}
+                            </ul>
+                            <div class="tab-content" id="myTabContent">
+                                {% if weekdays_class %}
+                                    <div class="tab-pane fade show active" id="weekdaysclass" role="tabpanel" aria-labelledby="weekdaysclass-tab">
+                                        <table class="align-middle mb-0 table table-bordered table-info mb-2 table-sm">
+                                            <thead>
+                                                <tr>
+                                                    <th class="text-center">BRANCH</th>
+                                                    <th class="text-center">START OF CLASS</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                {% for item in weekdays_class %}
+                                                    <tr>
+                                                        <td class="text-center">{{item['branch_name']}}</td>
+                                                        <td class="text-center">{{item['start_date']}}</td>
+                                                    </tr>
+                                                {% endfor %}
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                {% endif %}
+                                {% if saturday_class %}
+                                    <div class="tab-pane fade {%if not weekdays_class %}show active{% endif %}" id="saturdayclass" role="tabpanel" aria-labelledby="saturdayclass-tab">
+                                        <table class="align-middle mb-0 table table-bordered table-info mb-2 table-sm">
+                                            <thead>
+                                                <tr>
+                                                    <th class="text-center">BRANCH</th>
+                                                    <th class="text-center">START OF CLASS</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                {% for item in saturday_class %}
+                                                    <tr>
+                                                        <td class="text-center">{{item['branch_name']}}</td>
+                                                        <td class="text-center">{{item['start_date']}}</td>
+                                                    </tr>
+                                                {% endfor %}
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                {% endif %}
+                                {% if sunday_class %}
+                                    <div class="tab-pane fade {%if not weekdays_class and not saturday_class %}show active{% endif %}" id="sundayclass" role="tabpanel" aria-labelledby="sundayclass-tab">
+                                        <table class="align-middle mb-0 table table-bordered table-info mb-2 table-sm">
+                                            <thead>
+                                                <tr>
+                                                    <th class="text-center">BRANCH</th>
+                                                    <th class="text-center">START OF CLASS</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                {% for item in sunday_class %}
+                                                    <tr>
+                                                        <td class="text-center">{{item['branch_name']}}</td>
+                                                        <td class="text-center">{{item['start_date']}}</td>
+                                                    </tr>
+                                                {% endfor %}
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                {% endif %}
+                            </div>
                         </div>
                     {% endif %}
                     <div class="text-right">
